# AmpliTF

./: .gitignore  CONTRIBUTING.md  README.md  benchmarks.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
amplitf/: __init__.py  dalitz_decomposition.py  dynamics.py  interface.py  kinematics.py  likelihood.py  optimisation.py  plotting.py  rootio.py  toymc.py
amplitf/interface/: __init__.py  interface_jax.py  interface_numpy.py  interface_tf.py
amplitf/phasespace/: __init__.py  b2ddkpi_phasespace.py  baryonic_3body_phasespace.py  combined_phasespace.py  dalitz_phasespace.py  four_body_angular_phasespace.py  four_body_helicity_phasespace.py  lambda_phasespace.py  rectangular_phasespace.py  veto_phasespace.py
docs/: conf.py  index.rst
tests/: test_b2ddpik.py  test_b2dstdsstpi.py  test_dist_lb2dppi_fit.py  test_dist_lb2dppi_fit_v2.py  test_fit.py  test_interface.py  test_kinematics.py  test_lb2dppi_fit.py  test_nested_helicity_angles.py  test_norm.npy  test_spline_lineshape.py  test_toymc.py
