[metadata]
name = amplitf
author = Anton Poluektov
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Tracker = https://github.com/apoluekt/amplitf/issues
    Changelog = https://github.com/apoluekt/amplitf/releases
    Source = https://github.com/apoluekt/amplitf
license = GPLv3 or later
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics

[options]
python_requires = >=3.6, <3.10
setup_requires =
    setuptools_scm
install_requires =
    iminuit
    numpy
    sympy
    tensorflow >= 2.0
packages = find:
